hphp/hack/test/typecheck/type_constant_projection_where.php.rust_elab.exp
File "type_constant_projection_where.php", line 10, characters 41-44:
Type access is only valid for a class, `self`, or `this` (Naming[2061])
