hphp/hack/test/typecheck/type_constant_projection_where.php
<?hh

abstract class AC {
  abstract const type Tbar;
}

class C {
  public function foo<Tfoo as AC, Tbar>(Tbar $_): void where Tfoo::Tbar = Tbar {}

  public function bar<Tfoo as AC, Tbar>(Tfoo::Tbar $_): void {}
}
